--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 axum = "0.6.20"
+gio = "0.18.1"
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
