--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 axum = "0.6.20"
 gio = "0.18.1"
 serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.106"
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
