Implemented GET and modprobe functionality
TODO: modprobe GET

--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 [
     {
         "type": "gio",
-        "id" : 1,
+        "id": 1,
         "name": "Lock screen notifications",
         "description": "Show notifications on the lock screen",
         "value_type": "bool",
@@ -10,7 +10,7 @@
     },
     {
         "type": "gio",
-        "id" : 2,
+        "id": 2,
         "name": "Boost volume",
         "description": "Allow boosting volume above 100%",
         "value_type": "bool",
@@ -19,7 +19,7 @@
     },
     {
         "type": "gio",
-        "id" : 3,
+        "id": 3,
         "name": "USBGuard Service",
         "description": "If the USBGuard service is present and this setting is enabled, USB devices will be protected as configured in the usb-protection-level setting.",
         "value_type": "bool",
@@ -28,11 +28,19 @@
     },
     {
         "type": "gio",
-        "id" : 4,
+        "id": 4,
         "name": "Show battery percentage",
         "description": "Show battery percentage in the top bar",
         "value_type": "bool",
         "schema": "org.gnome.desktop.interface",
         "key": "show-battery-percentage"
+    },
+    {
+        "type": "modprobe",
+        "id": 5,
+        "name": "Enable/Disable camera",
+        "description": "Enable or Disable camera hardware",
+        "value_type": "bool",
+        "driver": "uvcvideo"
     }
 ]
