--- a/helix-backend.desktop
+++ b/helix-backend.desktop
@@ -6,6 +6,6 @@ Exec=helix-backend
 Terminal=false
 Type=Application
 Keywords=Hardening;
-Icon=/home/vishal/Projects/helix-backend/helix-backend-logo.png
+# Icon=/home/vishal/Projects/helix-backend/helix-backend-logo.png <- change this entry to path
 Categories=Utility;
 StartupNotify=true
