--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ gio = "0.18.1"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.106"
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
+tower = "0.4.13"
+tower-http = { version = "0.4.4", features = ["fs"] }
