Added support for systemctl services

--- a/settings.json
+++ b/settings.json
@@ -8,6 +8,14 @@
         "command": "echo 123"
     },
     {
+        "setting_type": "systemctl",
+        "id": 512,
+        "name": "Enable/Disable ssh",
+        "description": "Enable or Disable ssh",
+        "value_type": "bool",
+        "service_name": "ssh"
+    },
+ {
         "setting_type": "modprobe",
         "id": 66,
         "name": "Enable/Disable camera",
